--- a/resources/computer/time table.html
+++ b/resources/computer/time table.html
@@ -76,7 +76,7 @@
   <hr>
   <div class="col-md-12 text-center" >
   
-  <a href="index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
+  <a href="../index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
   <a href="https://drive.google.com/uc?export=download&id=1vMLLtXYXiRoe1yCiRu3iJ0q52oAA9Q5_"><button type="button" class="btn btn-success">DOWNLOAD THE PDF</button><a>
   </div>
   <hr>
