--- a/resources/maths/lecture 2.html
+++ b/resources/maths/lecture 2.html
@@ -76,7 +76,7 @@
   <hr>
   <div class="col-md-12 text-center" >
   
-  <a href="index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
+  <a href="../index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
   <a href="https://drive.google.com/uc?export=download&id=1X1V49FR_6PP_rTKt02a1yU84H6sD4aCo"><button type="button" class="btn btn-success">DOWNLOAD THE PDF</button><a>
   </div>
   <hr>
