--- a/resources/maths/reference book.html
+++ b/resources/maths/reference book.html
@@ -76,7 +76,7 @@
   <hr>
   <div class="col-md-12 text-center" >
   
-  <a href="index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
+  <a href="../index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
   <a href="https://drive.google.com/uc?export=download&id=1bkQH8yybajY9gx7c4JdumOG4UW_JK1HG"><button type="button" class="btn btn-success">DOWNLOAD THE PDF</button><a>
   </div>
   <hr>
