--- a/resources/physics/equilibrium.html
+++ b/resources/physics/equilibrium.html
@@ -76,7 +76,7 @@
   <hr>
   <div class="col-md-12 text-center" >
   
-  <a href="index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
+  <a href="../index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
   <a href="https://drive.google.com/uc?export=download&id=1--SY4d5Uz8_Sa69rWDCqZQaqawiZT8XG"><button type="button" class="btn btn-success">DOWNLOAD THE PDF</button><a>
   </div>
   <hr>
