--- a/resources/physics/kirtisirlec1.html
+++ b/resources/physics/kirtisirlec1.html
@@ -76,7 +76,7 @@
   <hr>
   <div class="col-md-12 text-center" >
   
-  <a href="index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
+  <a href="../index.html"><button type="button" class="btn btn-dark">RETURN TO DASHBOARD</button></a>
   <a href="https://drive.google.com/uc?export=download&id=1-6hZZ_UeA-RXSA7x1aVYehD7IyuEURWd"><button type="button" class="btn btn-success">DOWNLOAD THE PDF</button><a>
   </div>
   <hr>
