--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		  <div  style='text-align:center' >
 	
           <h5 class="text-muted">About</h5>
-          <h5 class="text-muted"><a href=>Created by Rajnish Kumar </h5>
+			  <h5 class="text-muted"><a href='rajnish.html'>Created by Rajnish Kumar </a></h5>
          
 		  </div>
           
