--- a/rajnish.html
+++ b/rajnish.html
@@ -139,6 +139,7 @@
 	
           <h5 class="text-muted">About</h5>
           <h5 class="text-muted">Created by Rajnish Kumar </h5>
+	  <h5 class="text-muted">Content writer Devansh Dwivedi </h5>
          
 		  </div>
           
