--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Math</td>
+      <td>Mathematics</td>
       <td>syllabus,ppt &pdfs </td>
       <td><a href='maths.html'>click here</a></td>
     </tr>
